--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ ext {
 }
 
 dependencies {
+
+    // 한 번에 모든 API Swagger 를 보기 위한 라이브러리
+    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.15'
+
 	// API Gateway 역할을 위한 라이브러리
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
